syntax="proto3";
package dataFormat;

option go_package = "";

message Message {
  string stand = 1;
  repeated Warnstufen warnstufen = 2;
}

message Messages{
  repeated Message message = 1;
}

message Warnstufen{
  string Region = 1;
  string GKZ = 2;
  string Name = 3;
  string Warnstufe = 4;
}